<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNameDateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname_firstname_date" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameText" />
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailText" />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"/>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userNameText" />
    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <Button
            android:id="@+id/birthDateButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthDateButtonText"
            android:onClick="onBirthDateClick"/>
        <TextView
            android:id="@+id/birthDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_birthdate"/>

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/age_textView_marginHorizontal"
            android:text="@string/ageText" />
        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age" />
    </LinearLayout>

    <TextView
        android:id="@+id/selfDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selfDescription" />
    <EditText
        android:id="@+id/selfDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tell_about_yourself"/>

    <TextView
        android:id="@+id/occupationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/occupation" />
    <EditText
        android:id="@+id/occupationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_occupation"/>

    <Button
        android:id="@+id/submitButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_button"
        android:text="@string/submit_button"
        android:onClick="onSubmit"/>

    <TextView
        android:id="@+id/errorMsgTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/errorMsgMarginTop"/>

</LinearLayout>